force-app/main/default/objects/Tournament__c/Tournament__c.object-meta.xml
<CustomObject>
    <label>Tournament</label>
    <pluralLabel>Tournaments</pluralLabel>
    <nameField>
        <label>Tournament Name</label>
        <type>Text</type>
        
    </nameField>
    <sharingModel>Read</sharingModel>
    <description>Represents gaming tournaments.</description>
</CustomObject>