force-app/main/default/objects/Tournament__c/fields/Prize_Pool__c.field-meta.xml
<CustomField>
    <fullName>Prize_Pool__c</fullName>
    <label>Prize Pool</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>