force-app/main/default/objects/Tournament__c/fields/Tournament_Status__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Status__c</fullName>
    <label>Tournament Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Upcoming</fullName><default>true</default><label>Upcoming</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>